--- a/.env
+++ b/.env
@@ -2,11 +2,4 @@ SMTP_HOST=mail.lms-invention.com
 SMTP_PORT=465
 SMTP_USER=info@lms-invention.com
 SMTP_PASSWORD=LMSINV@info23
-DATABASE_URL=sqlite:///site.db
-
-
-# SMTP_HOST=mail.lms-invention.com
-# SMTP_PORT=465
-# SMTP_USER=info@lms-invention.com
-# SMTP_PASSWORD=LMSINV@info23
-# DATABASE_URL=mysql+pymysql://wqqf3260_Rivaldo2002:Cuadrado2002@localhost/wqqf3260_lmsinventionv2 
+DATABASE_URL=mysql+pymysql://wqqf3260_Rivaldo2002:Cuadrado2002@localhost/wqqf3260_lmsinventionv2 
